<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".IndexActivity">

    <RelativeLayout
        android:id="@+id/index_title_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#CB3131"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/index_title_icon_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:background="@drawable/selector_index_icon_press"
            android:src="@mipmap/default_round_head_new"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/index_title_icon_image"
            android:background="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/index_title_text"
            android:textColor="@android:color/white"
            android:textSize="24sp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/index_title_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/index_title_relativelayout"
        android:orientation="horizontal">

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <RadioGroup
                    android:id="@+id/index_title_radio_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    >

                    <RadioButton
                        android:id="@+id/index_title_head_radio"
                        style="@style/IndexRadioBtn"
                        android:text="@string/index_title_head"/>

                    <RadioButton
                        android:id="@+id/index_title_recreation_radio"
                        style="@style/IndexRadioBtn"
                        android:text="@string/index_title_recreation"/>

                    <RadioButton
                        android:id="@+id/index_title_sport_radio"
                        style="@style/IndexRadioBtn"
                        android:text="@string/index_title_sport"/>

                    <RadioButton
                        android:id="@+id/index_title_economics_radio"
                        style="@style/IndexRadioBtn"
                        android:text="@string/index_title_economics"/>

                    <RadioButton
                        android:id="@+id/index_title_scince_radio"
                        style="@style/IndexRadioBtn"

                        android:text="科技"/>
                </RadioGroup>
            </LinearLayout>
        </HorizontalScrollView>


        <ImageView
            android:id="@+id/index_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:src="@drawable/selector_index_add"/>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/index_content_viewpager"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/index_title_linearlayout"/>


</RelativeLayout>
